card ui fixed (content overlapping image)

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -49,6 +49,7 @@
       display: flex;
       flex-direction: column;
       width: auto;
+      height: 100%;
       min-height: 200px;
       border-radius: 20px;
       background-color: var(--navy-900);
@@ -65,6 +66,13 @@
         justify-content: flex-end;
         width: 100%;
         height: 20%;
+
+        @include u.breakpoint('large') {
+              height: 18%;
+          }
+          @include u.breakpoint('medium') {
+              height: 18%;
+          }
       }
       img{
           width: 60px;
@@ -121,7 +129,7 @@
             p{
               margin: 0;
             }
-            .time{
+            &--time{
               font-size: 2.8rem;
               color: var(--white);
             }
